[fix][1.0.1][Issue#02][Issue#03] Bug and style fixes Fix: - Numbers no longer go off the screen. - Reduced size so works better on mobile. Changes: - Added version number and link to projects git. - Added color to buttons. - Provided more meta tags.

--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ code {
 .frame {
   margin: auto;
   padding: 20px;
-  width: 600px;
+  width: 415px;
+  border:2px solid black;
   border-radius: 10px;
   background-color: gray;
   box-shadow: darkgray 8px 8px 8px;
@@ -28,31 +29,37 @@ code {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-row-gap: 20px;
-  grid-column-gap: 25px;
+  grid-row-gap: 10px;
+  grid-column-gap: 10px;
+
 }
 
-.calculator_button {
+.calculator_button_root {
+  width: 75px;
+  height: 75px;
   font-size: 32px;
   border:none;
-  width: 100px;
-  height: 100px;
   border-radius: 2px;
   background-color:ghostwhite;
   box-shadow: black 1px 1px;
+  cursor:pointer;
 }
 
-.calculator_button_big {
+.calculator_button_root:hover {
+  color: white;
+  background-color:black;
+}
+
+#calculator_button {
+}
+
+#calculator_button_big {
   font-size: 64px;
-  border:none;
-  height: 220px;
-  width: 100px;
+  height: 160px;
+
   grid-row-start: 3;
   grid-row-end: 5;
   grid-column-start: 5;
-  border-radius: 2px;
-  background-color: ghostwhite;
-  box-shadow: black 1px 1px;
 }
 
 .screen {
@@ -62,6 +69,7 @@ code {
 
   display: grid;
   grid-template-rows: 100px 50px 50px;
+  grid-template-columns: 100%;
   background-color: lightblue;
   border-radius: 3px;
 
@@ -69,18 +77,32 @@ code {
   border-left: black solid 1px;
   border-right: white solid 1px;
   border-bottom: white solid 1px;
+
+  overflow: hidden;
 }
 
 .screen_result {
-  font-size: 64px;
+  font-size: 48px;
   font-weight: bold;
 }
 
 .screen_input {
-  font-size: 32px;
+  font-size: 24px;
 }
 
 .screen_history {
   color:gray;
-  font-size: 24px;
+  font-size: 16px;
+}
+
+.git_link {
+  text-decoration: none;
+  color: black;
+}
+.git_link:hover {
+  color: white;
+}
+
+.version {
+  float: right;
 }
